<resources>
    <string name="google_map_api_key">AIzaSyDMO1uHVf0nI0dNQI9Un69LD4tFNgMK26k</string>
    <string name="app_name">QuestCity</string>
    <string name="title_activity_maps">Map</string>
    <string name="play_button">Play</string>
    <string name="statistics_button">Statistics</string>
    <string name="settings_button">Settings</string>
    <string name="exit_button">Exit</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="password">password</string>
    <string name="email">email</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="facebook_app_id">383497312234238</string>
    <string name="fb_login_protocol_scheme">fb383497312234238</string>


    <string name="quests">Quests</string>
    <string name="play">Play</string>
    <string name="map">Map</string>
    <string name="info">Info</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="google_id_client">649497890121-s12alndenue5dcejutqnm26766ja45u7.apps.googleusercontent.com</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="date_of_birth">Birthday</string>
    <string name="name">name</string>
    <string name="surname">surname</string>
    <string name="ready">Ready</string>
    <string name="don_t_have_an_account_n_sign_up">"Don\'t have an account? \n              Sign up"</string>
    <string name="title_activity_login2">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
